force-app/main/default/objects/Tags_List__c/Tags_List__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing :</description>
    <label>Tags List</label>
    <nameField>
        <displayFormat>TL-{00000}</displayFormat>
        <label>Tags List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tags List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>