force-app/main/default/objects/Tags_List__c/fields/Dev_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Dev_Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dev Contact ID</label>
    <referenceTo>Dev_Contact__c</referenceTo>
    <relationshipName>Tags_List</relationshipName>
    <type>Lookup</type>
</CustomField>