force-app/main/default/objects/Tags_List__c/fields/Dev_File__c.field-meta.xml
<CustomField>
    <fullName>Dev_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dev File</label>
    <referenceTo>Dev_Files__c</referenceTo>
    <relationshipName>Tags_List</relationshipName>
    <type>Lookup</type>
</CustomField>