force-app/main/default/objects/Tags_List__c/fields/Dev_Form__c.field-meta.xml
<CustomField>
    <fullName>Dev_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dev Form</label>
    <referenceTo>Dev_Forms__c</referenceTo>
    <relationshipName>Tags_List</relationshipName>
    <type>Lookup</type>
</CustomField>