force-app/main/default/objects/Tags_List__c/fields/Dev_Form_Question__c.field-meta.xml
<CustomField>
    <fullName>Dev_Form_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dev Form Question</label>
    <referenceTo>Dev_Form_Questions__c</referenceTo>
    <relationshipName>Tags_List</relationshipName>
    <type>Lookup</type>
</CustomField>