force-app/main/default/objects/Tags_List__c/fields/Dev_Program__c.field-meta.xml
<CustomField>
    <fullName>Dev_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dev Program</label>
    <referenceTo>Developer_Program__c</referenceTo>
    <relationshipName>Tags_List</relationshipName>
    <type>Lookup</type>
</CustomField>