force-app/main/default/objects/Tags_List__c/fields/Other_Tag_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Tag_Type__c</fullName>
    <label>Other Tag Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>