force-app/main/default/objects/Tags_List__c/fields/Tag_Type__c.field-meta.xml
<CustomField>
    <fullName>Tag_Type__c</fullName>
    <label>Tag Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Technology of Interest</fullName>
            </value>
            <value>
                <fullName>Field of Interest</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>