force-app/main/default/objects/Tags_List__c/fields/Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Type__c</fullName>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dev Contact</fullName>
            </value>
            <value>
                <fullName>Dev Event</fullName>
            </value>
            <value>
                <fullName>Dev Program</fullName>
            </value>
            <value>
                <fullName>Dev File</fullName>
            </value>
            <value>
                <fullName>Dev Form</fullName>
            </value>
            <value>
                <fullName>Dev Form Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>